Projet_GL/src/test/deca/codegen/valid/unprovided/testGrosCalcul.deca
{
	// int a = 2 * 5 + 4 / 2; // 12
	// float b = 2 + 7; // 9
	// float res = 2 * 8 + 12 / 3 - 9.0 * (4 - 1 ); // -7
	float res = 9.0 * (4-1);
	// float resu = 12/3;

	// println(a);
	// println(b);
	println(res);

	// println(resu);
	// float b = 9;
	// float res;
	// res = b * (4-1);

	// println(res);
}
