Projet_GL/src/test/deca/codegen/invalid/mult_overflow.deca
// Overflow dans la multiplication
{
    float b = 3.2 * 25234623563457634563.1234;
    b = b*b*b*b*b;
}
